--- a/css/main.css
+++ b/css/main.css
@@ -1131,7 +1131,7 @@ html {
     justify-content: flex-start;
     height: -moz-fit-content;
     height: fit-content;
-    width: 95%;
+    width: 100%;
     justify-self: center;
     margin-top: 4vw;
   }
@@ -1231,28 +1231,34 @@ html {
     width: fit-content;
   }
   .main-body .content .content-grid #item3 {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr;
     background-color: white;
     width: 100vw;
-    height: 100vh;
+    height: -moz-fit-content;
+    height: fit-content;
     align-items: center;
     justify-items: center;
     align-content: center;
     justify-content: center;
-    margin-top: 0;
   }
   .main-body .content .content-grid #item3 #familyinfo {
-    width: 40%;
-    height: 70%;
+    width: 100%;
+    height: -moz-fit-content;
+    height: fit-content;
     display: grid;
     grid-template-columns: 1fr;
+    position: relative;
+    justify-items: center;
+  }
+  .main-body .content .content-grid #item3 #familyinfo img {
+    width: 100%;
   }
   .main-body .content .content-grid #item3 #familyinfo h3 {
     font-family: "Roboto";
     font-style: normal;
     font-weight: 900;
-    font-size: 3vw;
+    font-size: 46px;
     line-height: 85%;
     text-align: center;
     font-variant: all-small-caps;
@@ -1260,6 +1266,7 @@ html {
     text-align: left;
     margin-top: 0;
     padding-bottom: 5px;
+    padding-top: 100px;
     border-bottom: 3px solid rgb(68, 98, 88);
     width: -moz-fit-content;
     width: fit-content;
@@ -1271,22 +1278,26 @@ html {
     color: #2C2C2C;
     font-family: "Roboto";
     font-weight: 300;
-    font-size: 1.2vw;
+    font-size: 18px;
     line-height: 140%;
     text-align: left;
-    width: 50%;
+    width: 60%;
     height: 70%;
     word-wrap: break-word;
     margin: 0;
-    padding-top: 2vw;
+    padding-top: 70px;
+    text-align: center;
   }
   .main-body .content .content-grid #item3 #familyinfo h5 {
     font-family: "Sacramento";
+    text-align: center;
     color: black;
     font-weight: 100;
-    font-size: 2vw;
+    font-size: 38px;
     margin: 0;
-    padding-top: 2vw;
+    padding-top: 70px;
+    padding-bottom: 100px;
+    width: 70%;
   }
   .main-body .content .content-grid #item3 img {
     width: 100%;
@@ -1294,34 +1305,39 @@ html {
   .main-body .content .content-grid #item4 {
     display: grid;
     grid-template-columns: 1fr;
-    background-image: url("https://dsm01pap009files.storage.live.com/y4mBrUMkWpXvrMmWaDHF3XQx6d14ayztQHrqmFdg9lI7C2K3i5EuOm88sxO6JetBOdKzQfB68PxRD2a4vT-j51aSH0P2K1FfWhNma-hU8X9lI2a_mVe99A7DB23UbMZwW1EQN3lzWeMN3-Wlx-KO5WznKH0Wckc7ZttLJhHmO4_l0bFv6Gm_aytcMPotB0SIDXo?width=1466&height=1078&cropmode=none");
+    background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%219012&authkey=%21AC7DRUs41kNuNJ4&width=1466&height=1078");
     background-repeat: no-repeat;
     background-position: right;
     background-size: cover;
+    opacity: 100%;
     width: 100%;
-    height: 50vw;
+    height: 100vh;
     align-items: center;
   }
   .main-body .content .content-grid #item4 #container-column {
-    margin-left: 10%;
     display: flex;
     flex-direction: column;
     height: 20vw;
+    align-items: center;
+    justify-content: center;
   }
   .main-body .content .content-grid #item4 #container-column h3 {
     color: rgb(68, 98, 88);
     font-family: "Roboto";
     font-style: normal;
     font-weight: 900;
-    font-size: 3vw;
-    line-height: 85%;
+    font-size: 33px;
+    line-height: 90%;
     text-align: center;
     font-variant: all-small-caps;
-    width: 35%;
-    text-align: left;
+    width: 70%;
+    text-align: center;
+    padding: 30px;
+    background-color: white;
+    box-shadow: #FFFFFF 1px 0 10px;
   }
   .main-body .content .content-grid #item5 {
-    height: 50vw;
+    height: 100vh;
     display: grid;
     grid-template-columns: 1fr;
     background-color: #F1ECE8;
@@ -1332,18 +1348,18 @@ html {
     font-family: "Roboto";
     font-style: normal;
     font-weight: 900;
-    font-size: 3vw;
+    font-size: 35px;
     line-height: 85%;
     text-align: center;
     font-variant: all-small-caps;
     color: rgb(68, 98, 88);
-    margin-bottom: 31px;
+    margin-bottom: 30px;
   }
   .main-body .content .content-grid #item5 #item5-grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    height: 28vw;
-    width: 50vw;
+    height: 100%;
+    width: 100vw;
     align-self: center;
     justify-self: center;
     align-content: center;
@@ -1357,7 +1373,7 @@ html {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 28vw;
+    height: 70vh;
     align-items: center;
     justify-self: center;
     justify-items: center;
@@ -1371,26 +1387,24 @@ html {
     font-family: "Roboto";
     font-style: normal;
     font-weight: 600;
-    font-size: 1.2vw;
-    line-height: 2vw;
+    font-size: 25px;
+    width: 90%;
+    line-height: 90%;
     margin: 0;
     font-variant: all-small-caps;
     color: #B4DE4A;
-    height: -moz-fit-content;
-    height: fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
-    border-bottom: 3px solid #B4DE4A;
-    padding-top: 2vw;
+    border-bottom: 2px solid #B4DE4A;
+    padding-top: 40px;
     text-align: center;
+    padding-bottom: 30px;
   }
   .main-body .content .content-grid #item5 #item5-grid a .item5-column p {
     font-family: "Roboto";
     font-weight: 200;
-    font-size: 0.9vw;
+    font-size: 20px;
     color: #FFFFFF;
     text-align: center;
-    padding: 2vw;
+    padding: 10px;
     margin: 0;
   }
   .main-body .content .content-grid #item5 #item5-grid a:hover .item5-column {
@@ -1408,7 +1422,7 @@ html {
     align-self: center;
     align-items: center;
     width: 100vw;
-    height: 15vw;
+    height: 30vh;
     background-color: #1C312A;
     align-content: center;
     justify-content: flex-start;
@@ -1417,106 +1431,16 @@ html {
     position: relative;
     bottom: 0px;
     margin-bottom: 0px;
+    justify-content: center;
   }
-  .main-body .footer #gaiaartwork {
-    height: 9vw;
-    width: 9vw;
-    margin-left: 10vw;
-  }
-  .main-body .footer .footer-ul {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    list-style-type: none;
-    margin: 0 0 0 10vw;
-    padding: 0;
-    position: absolute;
-    top: 2.5vw;
-    left: 20vw;
-    height: -moz-fit-content;
-    height: fit-content;
-  }
-  .main-body .footer .footer-ul .footer-li {
-    width: 20vw;
-    align-self: center;
-  }
-  .main-body .footer .footer-ul .footer-li h5 {
-    font-family: "Roboto";
-    font-style: normal;
-    font-weight: 600;
-    font-size: 1.2vw;
-    line-height: 2vw;
-    margin: 0;
-    font-variant: all-small-caps;
-    color: #B4DE4A;
-  }
-  .main-body .footer .footer-ul .footer-li .one-line-container {
-    display: grid;
-    grid-template-columns: 1fr;
-    margin-top: 0px;
-    border-top: 3px solid #B4DE4A;
-    height: -moz-fit-content;
-    height: fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
-  }
-  .main-body .footer .footer-ul .footer-li .one-line-container p {
-    font-family: "Roboto";
-    font-weight: 200;
-    font-size: 0.9vw;
-    line-height: 1vw;
-    color: #FFFFFF;
-  }
-  .main-body .footer .footer-ul .footer-li .one-line-container ul {
-    list-style-type: disc;
+  .main-body .footer #bottom-tag {
     color: white;
-    width: -moz-fit-content;
-    width: fit-content;
-  }
-  .main-body .footer .footer-ul .footer-li .one-line-container ul li {
-    width: -moz-fit-content;
-    width: fit-content;
-  }
-  .main-body .footer .footer-ul .footer-li .one-line-container ul li a {
     font-family: "Roboto";
     font-weight: 200;
-    font-size: 0.9vw;
-    line-height: 2vw;
-    color: #FFFFFF;
-    width: -moz-fit-content;
-    width: fit-content;
-  }
-  .main-body .footer .footer-ul .footer-li .three-line-container {
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-    margin-top: 0px;
-    margin-bottom: 1vw;
-    margin-right: 1vw;
-    border-top: 3px solid #B4DE4A;
-    height: -moz-fit-content;
-    height: fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
-  }
-  .main-body .footer .footer-ul .footer-li .three-line-container a {
-    font-family: "Roboto";
-    font-style: normal;
-    font-weight: 200;
-    font-size: 0.9vw;
-    line-height: 3vw;
-    text-decoration-line: underline;
-    color: #FFFFFF;
-    display: flex;
-  }
-  .main-body .footer .footer-ul .footer-li .three-line-container a #mailicon {
-    margin-right: 1vw;
-    width: 18px;
-    height: 13px;
-    align-self: center;
-  }
-  .main-body .footer .footer-ul .footer-li .three-line-container a #phoneicon {
-    margin-right: 0.6vw;
-    height: 13px;
-    align-self: center;
+    font-size: 18px;
+    text-align: center;
+    padding: 10px;
+    margin: 0;
   }
 }
 @media only screen and (min-width: 500px) {
