--- a/css/gallery.css
+++ b/css/gallery.css
@@ -63,69 +63,6 @@
     z-index: 98;
     transition: 0.4s all ease;
   }
-  .overlay-project-container {
-    display: grid;
-    opacity: 0;
-    visibility: hidden;
-    grid-template-columns: 1fr;
-    width: 100vw;
-    height: 100vh;
-    top: 0px;
-    left: 0px;
-    position: fixed;
-    z-index: 99;
-    transition: 0.8s all ease;
-  }
-  .overlay-project-container .overlay-project {
-    display: grid;
-    grid-template-columns: 1fr;
-    justify-self: center;
-    align-self: center;
-    width: 90vw;
-    height: 98vh;
-    z-index: 99;
-    background-color: white;
-    box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
-  }
-  .overlay-project-container .overlay-project .projectx {
-    position: absolute;
-    z-index: 99;
-    display: block;
-    top: 10vh;
-    right: 10vw;
-    width: 2vw;
-    height: 2vw;
-    opacity: 1;
-    transition: 0.4s all ease;
-  }
-  .overlay-project-container .overlay-project .projectx:hover {
-    cursor: pointer;
-    opacity: 0.6;
-  }
-  .overlay-project-container .overlay-project .project-content {
-    width: 50%;
-    height: 90%;
-    padding: 30px;
-    align-self: center;
-    justify-self: center;
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-  }
-  .overlay-project-container .overlay-project .project-content h2 {
-    font-family: "Roboto";
-    font-style: normal;
-    font-weight: 900;
-    font-size: 3vw;
-    text-align: center;
-    font-variant: all-small-caps;
-    color: #2C2C2C;
-    color: #2C2C2C;
-    height: 12vh;
-    padding-top: 3vh;
-    z-index: 98;
-    margin: 0;
-  }
   #alternate-nav-header {
     display: flex;
     flex-direction: column;
@@ -323,8 +260,6 @@
     grid-template-columns: 1fr;
     align-self: center;
     justify-self: center;
-    margin-top: 10vh;
-    margin-bottom: 30vh;
     /* hover */
     /* overlay styles */
     /* hover */
@@ -510,201 +445,49 @@
     background-color: white;
     margin-top: 5vw;
   }
-  .content-otherpages .content-grid #carousel {
-    display: flex;
-    flex-direction: column;
-    background-color: #2C2C2C;
-    justify-self: center;
-    align-self: center;
-    z-index: 99;
-    width: 100%;
-    box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
-  }
-  .content-otherpages .content-grid #carousel #whitetitle {
-    font-family: "Roboto";
-    font-style: normal;
-    font-weight: 900;
-    font-size: font-size 46px;
-    text-align: center;
-    font-variant: all-small-caps;
-    color: white;
-    background-color: #2C2C2C;
-    height: 12vh;
-    padding-top: 3vh;
-    z-index: 98;
-    margin: 0;
-    transition: 1s all ease;
-  }
-  .content-otherpages .content-grid #carousel #greentitle {
-    font-family: "Roboto";
-    font-style: normal;
-    font-weight: 900;
-    font-size: 3vw;
-    text-align: center;
-    font-variant: all-small-caps;
-    color: #B4DE4A;
-    background-color: #2C2C2C;
-    height: 12vh;
-    padding-top: 3vh;
-    z-index: 98;
-    margin: 0;
-    transition: 1s all ease;
-  }
-  .content-otherpages .content-grid #carousel #carousel-arrows {
-    height: 50vh;
-    width: 100%;
-    z-index: 95;
-    display: flex;
-    flex-direction: row;
-  }
-  .content-otherpages .content-grid #carousel #carousel-arrows #leftdiv {
-    background: linear-gradient(90deg, rgba(0, 0, 0, 0.8) 30%, rgba(0, 0, 0, 0));
-    height: 50vh;
-    width: 10vh;
-    left: 0px;
-    z-index: 98;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-  .content-otherpages .content-grid #carousel #carousel-arrows #leftdiv #leftarrow {
-    height: 5vw;
-    cursor: pointer;
-    transition: 0.2s all ease;
-    visibility: hidden;
-  }
-  .content-otherpages .content-grid #carousel #carousel-arrows #rightdiv {
-    background: linear-gradient(-90deg, rgba(0, 0, 0, 0.8) 30%, rgba(0, 0, 0, 0.459) 80%, rgba(0, 0, 0, 0));
-    height: 50vh;
-    width: 10vh;
-    margin: 0;
-    position: absolute;
-    right: 20vw;
-    z-index: 98;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-  .content-otherpages .content-grid #carousel #carousel-arrows #rightdiv #rightarrow {
-    height: 5vw;
-    cursor: pointer;
-    transition: 0.2s all ease;
-    visibility: visible;
-  }
-  .content-otherpages .content-grid #carousel #carousel-image-container {
-    width: 50vw;
-    height: 50vw;
-    background-color: transparent;
-    overflow: hidden;
-    z-index: 1;
-    position: absolute;
-    left: 25vw;
-    top: 34vh;
-    display: block;
-  }
-  .content-otherpages .content-grid #carousel #carousel-image-container #img-window {
-    height: 50vh;
-    width: -moz-max-content;
-    width: max-content;
-  }
-  .content-otherpages .content-grid #carousel #carousel-image-container #img-window #img1 {
-    background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218947&authkey=%21AB1Qh04as1rQ2TA&width=1920&height=1440");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    width: 60vw;
-    height: 50vh;
-    position: absolute;
-    left: 0;
-    top: 0;
-    transition: 2s all ease;
-  }
-  .content-otherpages .content-grid #carousel #carousel-image-container #img-window #img2 {
-    background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218937&authkey=%21AOdy5b469STyz9c&width=1221&height=1628");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    width: 60vw;
-    height: 50vh;
-    position: absolute;
-    left: 70vw;
-    top: 0;
-    transition: 2s all ease;
-  }
-  .content-otherpages .content-grid #carousel #carousel-image-container #img-window #img3 {
-    background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218866&authkey=%21APNppxyABeuv5hM&width=688&height=810");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    width: 60vw;
-    height: 50vh;
-    position: absolute;
-    left: 140vw;
-    top: 0;
-    transition: 2s all ease;
-  }
-  .content-otherpages .content-grid #carousel #carousel-description {
-    display: flex;
-    height: 30%;
-    width: 100%;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    padding: 5vw;
-  }
-  .content-otherpages .content-grid #carousel #carousel-description h3 {
-    font-family: "Roboto";
-    font-style: normal;
-    font-weight: 600;
-    font-size: 1.2vw;
-    line-height: 2vw;
-    margin: 0;
-    font-variant: all-small-caps;
-    color: #B4DE4A;
-  }
-  .content-otherpages .content-grid #carousel #carousel-description p {
-    font-family: "Roboto";
-    font-weight: 200;
-    font-size: 0.9vw;
-    line-height: 1.7vw;
-    color: #FFFFFF;
-  }
   .content-otherpages .content-grid .gallery-title {
     background-color: #FFFFFF;
     z-index: 99;
-    padding-top: 10vh;
   }
   .content-otherpages .content-grid .gallery-title h2 {
     font-family: "Roboto";
     font-style: normal;
     font-weight: 900;
-    font-size: 46px;
+    font-size: 42px;
     text-align: center;
     font-variant: all-small-caps;
     color: #2C2C2C;
     color: #2C2C2C;
-    height: 12vh;
-    padding-top: 3vh;
     z-index: 98;
-    margin: 0;
     transition: 1s all ease;
+    margin-top: 50px;
+    margin-bottom: 50px;
   }
   .content-otherpages .content-grid .image-gallery {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 5px;
     background-color: white;
-    padding-top: 3vh;
-    padding-bottom: 3vw;
-    padding-left: 1vw;
-    padding-right: 1vw;
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+  .content-otherpages .content-grid .image-gallery .column {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+  .content-otherpages .content-grid .image-item img {
+    width: 100%;
+    border-radius: 0px;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+    box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
   }
   .content-otherpages .content-grid .project-image-gallery {
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
-    width: 90%;
+    width: 80%;
     height: 90vh;
     gap: 10px;
     background-color: white;
@@ -748,19 +531,6 @@
   }
   .content-otherpages .content-grid .project:hover .project-overlay {
     opacity: 1;
-  }
-  .content-otherpages .content-grid .image-gallery .column {
-    display: flex;
-    flex-direction: column;
-    gap: 1vw;
-  }
-  .content-otherpages .content-grid .image-item img {
-    width: 100%;
-    border-radius: 0px;
-    height: 100%;
-    -o-object-fit: cover;
-       object-fit: cover;
-    box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
   }
   .content-otherpages .content-grid .image-item {
     position: relative;
@@ -1165,6 +935,43 @@
     bottom: -5vw;
     left: 0px;
     z-index: 1;
+  }
+  .content-otherpages .content-grid .project-info #project-name {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 900;
+    font-size: 3vw;
+    text-align: center;
+    font-variant: all-small-caps;
+    color: #2C2C2C;
+    z-index: 98;
+    margin: 0;
+  }
+  .content-otherpages .content-grid .project-info #project-text1 {
+    color: rgb(68, 98, 88);
+    font-family: "Roboto";
+    font-weight: 600;
+    font-size: 1.2vw;
+    line-height: 140%;
+    text-align: left;
+    margin: 0;
+    padding-top: 2vw;
+    font-variant: all-small-caps;
+  }
+  .content-otherpages .content-grid .project-info #project-text2 {
+    color: #2C2C2C;
+    font-family: "Roboto";
+    font-weight: 300;
+    font-size: 1vw;
+    line-height: 140%;
+    text-align: left;
+    width: 80%;
+    word-wrap: break-word;
+    margin: 0;
+    padding-top: 2vw;
+  }
+  .content-otherpages .content-grid #back-to-gallery-btn a {
+    text-decoration: none;
   }
   .content-otherpages .content-grid .services-title {
     background-color: transparent;
