--- a/css/main.scss
+++ b/css/main.scss
@@ -73,7 +73,8 @@ $GaiaGrey: #2C2C2C;
 
 /////////////////Page Styles///////////////
 @import "gallery"; 
-
+@import "services";
+@import "wip";
 
 //////////Mobile Version/////////
 @media only screen and (max-width: 499px){
