--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,9 @@
 @import url("https://use.fontawesome.com/releases/v5.13.1/css/all.css");
 @import url("https://fonts.googleapis.com/css2?family=Aref+Ruqaa:wght@400;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Sacramento&display=swap");
+@import url("https://use.fontawesome.com/releases/v5.13.1/css/all.css");
+@import url("https://fonts.googleapis.com/css2?family=Aref+Ruqaa:wght@400;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Sacramento&display=swap");
 * {
   box-sizing: border-box;
 }
@@ -1516,6 +1519,206 @@ html {
     color: #B4DE4A;
   }
 }
+@media only screen and (min-width: 500px) {
+  .about-splash {
+    position: absolute;
+    background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%2118502&authkey=%21ADsPQa4as5U4e-0&width=1466&height=890");
+    left: 0px;
+    top: 12vh;
+    width: 100vw;
+    height: 80vh;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    z-index: 99;
+    background-repeat: no-repeat;
+    background-position: top;
+    background-size: cover;
+  }
+  .about-splash .about-splash-items {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    right: 4vw;
+    top: 50vh;
+    margin: 0;
+    max-height: 60vh;
+    margin: 0;
+    z-index: 99;
+    width: 35vw;
+  }
+  .about-splash .about-splash-items .large-title {
+    font-family: "Aref Ruqaa", serif;
+    text-transform: uppercase;
+    color: white;
+    font-weight: 700;
+    font-size: 4vw;
+    text-align: center;
+    margin: 0;
+    line-height: 80%;
+    z-index: 99;
+    text-shadow: 3px 4px 7px rgba(32, 32, 32, 0.8);
+  }
+  #aboutpg-item1 {
+    background-color: #F1ECE8;
+    display: grid;
+    grid-template-columns: 1fr;
+    align-content: center;
+    justify-items: center;
+    padding: 2vw;
+  }
+  #aboutpg-item1 .aboutpg1container1 {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    padding-top: 2vw;
+  }
+  #aboutpg-item1 .aboutpg1container1 h2 {
+    color: rgb(68, 98, 88);
+    font-family: "Roboto";
+    font-weight: 900;
+    font-size: 3vw;
+    text-align: center;
+    font-variant: all-small-caps;
+    height: 12vh;
+    width: 15vw;
+    padding-top: 3vh;
+    margin: 0;
+    transition: 1s all ease;
+    border-bottom: 3px solid rgb(68, 98, 88);
+  }
+  #aboutpg-item1 .aboutpg1container1 p {
+    text-align: center;
+    color: #2C2C2C;
+    font-family: "Roboto";
+    font-weight: 300;
+    font-size: 1vw;
+    line-height: 140%;
+    text-align: left;
+    width: 60%;
+    height: 70%;
+    word-wrap: break-word;
+    margin: 0;
+    padding-top: 3vw;
+    padding-bottom: 6vw;
+  }
+  #aboutpg-item1 .aboutpg1container1 #about-img-grid {
+    display: flex;
+    flex-direction: row;
+    width: 90%;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+  }
+  #aboutpg-item1 .aboutpg1container1 #about-img-grid img {
+    height: 19vw;
+    padding: 0.5vw;
+  }
+  #aboutpg-item1 .aboutpg1container2 {
+    display: flex;
+    flex-direction: row;
+    background-color: white;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 50vh;
+    margin-top: 1vw;
+  }
+  #aboutpg-item1 .aboutpg1container2 img {
+    height: 100%;
+  }
+  #aboutpg-item1 .aboutpg1container2 p {
+    text-align: left;
+    color: #2C2C2C;
+    font-family: "Roboto";
+    font-weight: 300;
+    font-size: 1vw;
+    line-height: 140%;
+    width: 55%;
+    height: 100%;
+    word-wrap: break-word;
+    margin: 0;
+    padding: 10%;
+  }
+  #aboutpg-item2 {
+    background-color: #F1ECE8;
+    display: grid;
+    grid-template-columns: 1fr;
+    align-content: center;
+    justify-items: center;
+    height: 150vh;
+  }
+  #aboutpg-item2 h2 {
+    color: rgb(68, 98, 88);
+    font-family: "Roboto";
+    font-weight: 900;
+    font-size: 3vw;
+    text-align: center;
+    font-variant: all-small-caps;
+    height: 12vh;
+    width: 15vw;
+    padding-top: 3vh;
+    margin: 0;
+    transition: 1s all ease;
+    border-bottom: 3px solid rgb(68, 98, 88);
+  }
+  #aboutpg-item2 p {
+    text-align: center;
+    color: #2C2C2C;
+    font-family: "Roboto";
+    font-weight: 300;
+    font-size: 1vw;
+    line-height: 140%;
+    text-align: left;
+    width: 60%;
+    height: 70%;
+    word-wrap: break-word;
+    margin: 0;
+    padding-top: 3vw;
+    padding-bottom: 6vw;
+  }
+  #aboutpg-item3 {
+    background-color: #F1ECE8;
+    display: grid;
+    grid-template-columns: 1fr;
+    align-content: center;
+    justify-items: center;
+    height: 150vh;
+  }
+  #aboutpg-item3 h2 {
+    color: rgb(68, 98, 88);
+    font-family: "Roboto";
+    font-weight: 900;
+    font-size: 3vw;
+    text-align: center;
+    font-variant: all-small-caps;
+    height: 12vh;
+    width: 15vw;
+    padding-top: 3vh;
+    margin: 0;
+    transition: 1s all ease;
+    border-bottom: 3px solid rgb(68, 98, 88);
+  }
+  #aboutpg-item3 p {
+    text-align: center;
+    color: #2C2C2C;
+    font-family: "Roboto";
+    font-weight: 300;
+    font-size: 1vw;
+    line-height: 140%;
+    text-align: left;
+    width: 60%;
+    height: 70%;
+    word-wrap: break-word;
+    margin: 0;
+    padding-top: 3vw;
+    padding-bottom: 6vw;
+  }
+}
 @media only screen and (max-width: 499px) {
   .hide-xs {
     display: none;
@@ -2082,7 +2285,7 @@ html {
     top: 0px;
     z-index: 99;
     flex-direction: row;
-    background-image: url("https://dsm01pap009files.storage.live.com/y4mxtardiGUtDY3kgODSqZqoILtOsaT3ZU6mSkxMH5Zxd605WfUc0u-CHrkdSZMRZ1QwaOiUOVYixA11vlfFMxn3DRW0pliiLhSjS0jMtzmnkkk_cE72w6AkCGnxeFiiaBBGGogMiiXU-z2u3h5N8P_tuUgISdvUbXR8Mxedp_OSCrdlCxPid5NXh8pi4w294CS?width=1915&height=139&cropmode=none");
+    background-image: url("https://1drv.ms/i/c/b81a9b7983f88386/UQSGg_iDeZsaIIC43h8AAAAAAE5QpjDBJjicSrY?width=1915&height=139");
     background-size: cover;
     background-position: left;
     background-repeat: no-repeat;
@@ -2389,7 +2592,7 @@ html {
   }
   .main-body .content {
     position: relative;
-    margin-top: 95vh;
+    margin-top: 90vh;
     background-color: #D0D7CF;
     width: 100vw;
     display: grid;
@@ -2409,6 +2612,7 @@ html {
     width: 100%;
     z-index: 99;
     box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
+    background-color: white;
   }
   .main-body .content .content-grid #item1 {
     background-color: #2C2C2C;
@@ -2532,7 +2736,7 @@ html {
   .main-body .content .content-grid #item3 {
     display: flex;
     flex-direction: row;
-    background-image: url("https://dsm01pap009files.storage.live.com/y4maBrMSD_vYe_m8D3Nr69Pniplc2J1CqscH3AByoGi2F-N-3t6R6VOWtasNtIkz1gTW7CvQmlzv1xxHWyxzlP-5BuAI9ZRuPQvpTVegxPwoOtRTvWxAYFSK8OGCmYwX3xEsqHfjszAjFrvU7yA8piXpUIkfuoFupeaT5h9J-hM7v2b3izyubtZiiBGiMigoAlc?width=1468&height=930&cropmode=none");
+    background-image: url("https://1drv.ms/i/c/b81a9b7983f88386/UQSGg_iDeZsaIIC4MCAAAAAAAPWUYc5MD3Uy4JI?width=1468&height=930");
     background-position: bottom center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -2597,7 +2801,7 @@ html {
   .main-body .content .content-grid #item4 {
     display: grid;
     grid-template-columns: 1fr;
-    background-image: url("https://dsm01pap009files.storage.live.com/y4mBrUMkWpXvrMmWaDHF3XQx6d14ayztQHrqmFdg9lI7C2K3i5EuOm88sxO6JetBOdKzQfB68PxRD2a4vT-j51aSH0P2K1FfWhNma-hU8X9lI2a_mVe99A7DB23UbMZwW1EQN3lzWeMN3-Wlx-KO5WznKH0Wckc7ZttLJhHmO4_l0bFv6Gm_aytcMPotB0SIDXo?width=1466&height=1078&cropmode=none");
+    background-image: url("https://1drv.ms/i/c/b81a9b7983f88386/UQSGg_iDeZsaIIC4MiAAAAAAAJte3MhB3kieQCg?width=1466&height=1078");
     background-repeat: no-repeat;
     background-position: right;
     background-size: cover;
@@ -2717,7 +2921,7 @@ html {
     justify-content: flex-start;
     margin: 0;
     z-index: 90;
-    position: relative;
+    position: sticky;
     bottom: 0px;
     margin-bottom: 0px;
   }
