--- a/css/main.scss
+++ b/css/main.scss
@@ -661,7 +661,7 @@ $GaiaGrey: #2C2C2C;
             top:0px;
             z-index:99;
             flex-direction: row;
-            background-image: url("https://1drv.ms/i/c/b81a9b7983f88386/UQSGg_iDeZsaIIC43h8AAAAAAE5QpjDBJjicSrY?width=1915&height=139");
+            background-image: url("https://res.cloudinary.com/dr3r301ht/image/upload/v1742166398/TopBanner_yide2c.jpg");
             background-size:cover;
             background-position: left;
             background-repeat: no-repeat;
@@ -933,7 +933,7 @@ $GaiaGrey: #2C2C2C;
                 background-repeat: no-repeat;
                 background-position: center;
                 background-size: cover;
-                background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218928&authkey=%21ACQGgm4hSO0W8Kw&width=1923&height=969");
+                background-image: url("https://res.cloudinary.com/dr3r301ht/image/upload/v1742166649/Bg1_bgnkif.jpg");
             }
             #page2_image{
                 position: absolute;
@@ -944,7 +944,7 @@ $GaiaGrey: #2C2C2C;
                 background-repeat: no-repeat;
                 background-position: center;
                 background-size: cover;
-                background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218945&authkey=%21ANOnX3tIMdao29k&width=1000&height=572");
+                background-image: url("https://res.cloudinary.com/dr3r301ht/image/upload/v1742169398/20230108_200018487_iOS_dgyvu2.jpg");
             }
             #page3_image{
                 position: absolute;
@@ -955,7 +955,7 @@ $GaiaGrey: #2C2C2C;
                 background-repeat: no-repeat;
                 background-position: center;
                 background-size: cover;
-                background-image: url("https://dsm01pap009files.storage.live.com/y4mqZR-3nrJBXOx1Szrp3acvr9MbxSFoIsk6DCKnIP8lyTbaJY-X07l28Qe0HvYcvyANb9QL7Oqdq5oRchKUBzcXU72wJhGsSrzTR0weZmCK_aTxcW28yaMT0ogmd7IW4epNuIOKwHEDk2N1__C_11R_4YIcHLN9GB7l6LKVpzTCEXEq9PEzQYRNvef8ts7P8Ya?width=1923&height=969&cropmode=none");
+                background-image: url("https://res.cloudinary.com/dr3r301ht/image/upload/v1742169513/20230108_200517347_iOS_xvqlpk.jpg");
             }
             #page4_image{
                 position: absolute;
@@ -966,7 +966,7 @@ $GaiaGrey: #2C2C2C;
                 background-repeat: no-repeat;
                 background-position: center;
                 background-size: cover;
-                background-image: url("https://dsm01pap009files.storage.live.com/y4mphVHysaC7zQ5VsTB9OmMVWrp1DZ1hgkKo4VjUuk4XVdGnbT-xnrlAGbYMoksZRqRHN793iNqoDQWQKNTyoYqR5QqRFzvTHnaI2DX3fiyDudRRRX3TQnjYPm3hapH8nMUUzEBnNNyobkmOaIj2Mn0ijvdb2uh7bZlda-zjBBe-E6j7lyK9Dz0z4Fr3hM_Dg_q?width=1923&height=969&cropmode=none");
+                background-image: url("https://res.cloudinary.com/dr3r301ht/image/upload/v1742169531/20230108_200056384_iOS_ldfpbv.jpg");
             }
             #page5_image{
                 position: absolute;
@@ -977,7 +977,7 @@ $GaiaGrey: #2C2C2C;
                 background-repeat: no-repeat;
                 background-position: center;
                 background-size: cover;
-                background-image: url("https://dsm01pap009files.storage.live.com/y4mbV_ZWLBzt_htLCj_ZIGzJb8L9qrluyV3tmjcX3lxQwnCh5rgawd-39iRJN4N1NVcmyP5929-51RUZn77fUGeukXzjvwr1uzMvsHtJbYNS0Y05-vfP7g9J9dVVBCX3K3YmVFVy36tgMS-_v2OYyYIe2qCZGf-sRIovcXorU9mhpYopfZy_2-FFvbv_vZhhFZ4?width=6000&height=4000&cropmode=none");
+                background-image: url("https://res.cloudinary.com/dr3r301ht/image/upload/v1742166652/bg3_w6xj8x.png");
             }
         }
 
@@ -1135,7 +1135,7 @@ $GaiaGrey: #2C2C2C;
                 #item3{
                     display: flex;
                     flex-direction: row;
-                    background-image:url("https://1drv.ms/i/c/b81a9b7983f88386/UQSGg_iDeZsaIIC4MCAAAAAAAPWUYc5MD3Uy4JI?width=1468&height=930");
+                    background-image:url("https://res.cloudinary.com/dr3r301ht/image/upload/v1742166399/treelinecropped_cv9wiy.png");
                     background-position: bottom center;
                     background-size:cover;
                     background-repeat: no-repeat;
@@ -1200,7 +1200,7 @@ $GaiaGrey: #2C2C2C;
                 #item4{
                     display: grid;
                     grid-template-columns: 1fr;
-                    background-image: url("https://1drv.ms/i/c/b81a9b7983f88386/UQSGg_iDeZsaIIC4MiAAAAAAAJte3MhB3kieQCg?width=1466&height=1078");
+                    background-image: url("https://res.cloudinary.com/dr3r301ht/image/upload/v1742166655/WA_map_faded_vfdqrp.jpg");
                     background-repeat: no-repeat;
                     background-position:right;
                     background-size: cover;
