--- a/css/main.css
+++ b/css/main.css
@@ -736,7 +736,7 @@ html {
     width: max-content;
   }
   .content-container .content-grid #carousel #carousel-image-container #img-window #img1 {
-    background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218947&authkey=%21AB1Qh04as1rQ2TA&width=1920&height=1440");
+    background-image: url("https://res.cloudinary.com/dr3r301ht/image/upload/v1742166706/Carousel_Image_1_ouaoik.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -748,7 +748,7 @@ html {
     transition: 2s all ease;
   }
   .content-container .content-grid #carousel #carousel-image-container #img-window #img2 {
-    background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218937&authkey=%21AOdy5b469STyz9c&width=1221&height=1628");
+    background-image: url("https://res.cloudinary.com/dr3r301ht/image/upload/v1742166706/Carousel_Image_2_ykkm4j.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -760,7 +760,7 @@ html {
     transition: 2s all ease;
   }
   .content-container .content-grid #carousel #carousel-image-container #img-window #img3 {
-    background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218866&authkey=%21APNppxyABeuv5hM&width=688&height=810");
+    background-image: url("https://res.cloudinary.com/dr3r301ht/image/upload/v1742173333/9FCF9C78-9E2E-4706-A4BD-C2433E677B69_c6k03v.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -828,7 +828,7 @@ html {
     padding-right: 1vw;
   }
   .content-container .content-grid .project-image-gallery {
-    display: grid;
+    display: none;
     grid-template-columns: 1fr 1fr 1fr;
     height: 60vh;
     gap: 1vw;
@@ -935,7 +935,7 @@ html {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218945&authkey=%21ANOnX3tIMdao29k&width=1000&height=572");
+    background-image: url("https://res.cloudinary.com/dr3r301ht/image/upload/v1742166884/ServicesBanner_fte6du.png");
   }
   .content-container #servicesbanner #mobiletext1 {
     width: 100vw;
@@ -1548,7 +1548,7 @@ html {
     width: 35vw;
   }
   .about-splash .about-splash-items .large-title {
-    font-family: "Aref Ruqaa", serif;
+    font-family: "Noto Serif", serif;
     text-transform: uppercase;
     color: white;
     font-weight: 700;
@@ -1697,13 +1697,28 @@ html {
     text-align: center;
     font-variant: all-small-caps;
     height: 12vh;
-    width: 15vw;
+    width: 30vw;
     padding-top: 3vh;
     margin: 0;
     transition: 1s all ease;
     border-bottom: 3px solid rgb(68, 98, 88);
   }
   #aboutpg-item3 p {
+    text-align: center;
+    color: #2C2C2C;
+    font-family: "Roboto";
+    font-weight: 300;
+    font-size: 1vw;
+    line-height: 140%;
+    text-align: left;
+    width: 60%;
+    height: 70%;
+    word-wrap: break-word;
+    margin: 0;
+    padding-top: 3vw;
+    padding-bottom: 6vw;
+  }
+  #aboutpg-item3 li {
     text-align: center;
     color: #2C2C2C;
     font-family: "Roboto";
@@ -2285,7 +2300,7 @@ html {
     top: 0px;
     z-index: 99;
     flex-direction: row;
-    background-image: url("https://1drv.ms/i/c/b81a9b7983f88386/UQSGg_iDeZsaIIC43h8AAAAAAE5QpjDBJjicSrY?width=1915&height=139");
+    background-image: url("https://res.cloudinary.com/dr3r301ht/image/upload/v1742166398/TopBanner_yide2c.jpg");
     background-size: cover;
     background-position: left;
     background-repeat: no-repeat;
@@ -2544,7 +2559,7 @@ html {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218928&authkey=%21ACQGgm4hSO0W8Kw&width=1923&height=969");
+    background-image: url("https://res.cloudinary.com/dr3r301ht/image/upload/v1742166649/Bg1_bgnkif.jpg");
   }
   .main-body #background #page2_image {
     position: absolute;
@@ -2555,7 +2570,7 @@ html {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218945&authkey=%21ANOnX3tIMdao29k&width=1000&height=572");
+    background-image: url("https://res.cloudinary.com/dr3r301ht/image/upload/v1742169398/20230108_200018487_iOS_dgyvu2.jpg");
   }
   .main-body #background #page3_image {
     position: absolute;
@@ -2566,7 +2581,7 @@ html {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    background-image: url("https://dsm01pap009files.storage.live.com/y4mqZR-3nrJBXOx1Szrp3acvr9MbxSFoIsk6DCKnIP8lyTbaJY-X07l28Qe0HvYcvyANb9QL7Oqdq5oRchKUBzcXU72wJhGsSrzTR0weZmCK_aTxcW28yaMT0ogmd7IW4epNuIOKwHEDk2N1__C_11R_4YIcHLN9GB7l6LKVpzTCEXEq9PEzQYRNvef8ts7P8Ya?width=1923&height=969&cropmode=none");
+    background-image: url("https://res.cloudinary.com/dr3r301ht/image/upload/v1742169513/20230108_200517347_iOS_xvqlpk.jpg");
   }
   .main-body #background #page4_image {
     position: absolute;
@@ -2577,7 +2592,7 @@ html {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    background-image: url("https://dsm01pap009files.storage.live.com/y4mphVHysaC7zQ5VsTB9OmMVWrp1DZ1hgkKo4VjUuk4XVdGnbT-xnrlAGbYMoksZRqRHN793iNqoDQWQKNTyoYqR5QqRFzvTHnaI2DX3fiyDudRRRX3TQnjYPm3hapH8nMUUzEBnNNyobkmOaIj2Mn0ijvdb2uh7bZlda-zjBBe-E6j7lyK9Dz0z4Fr3hM_Dg_q?width=1923&height=969&cropmode=none");
+    background-image: url("https://res.cloudinary.com/dr3r301ht/image/upload/v1742169531/20230108_200056384_iOS_ldfpbv.jpg");
   }
   .main-body #background #page5_image {
     position: absolute;
@@ -2588,7 +2603,7 @@ html {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    background-image: url("https://dsm01pap009files.storage.live.com/y4mbV_ZWLBzt_htLCj_ZIGzJb8L9qrluyV3tmjcX3lxQwnCh5rgawd-39iRJN4N1NVcmyP5929-51RUZn77fUGeukXzjvwr1uzMvsHtJbYNS0Y05-vfP7g9J9dVVBCX3K3YmVFVy36tgMS-_v2OYyYIe2qCZGf-sRIovcXorU9mhpYopfZy_2-FFvbv_vZhhFZ4?width=6000&height=4000&cropmode=none");
+    background-image: url("https://res.cloudinary.com/dr3r301ht/image/upload/v1742166652/bg3_w6xj8x.png");
   }
   .main-body .content {
     position: relative;
@@ -2736,7 +2751,7 @@ html {
   .main-body .content .content-grid #item3 {
     display: flex;
     flex-direction: row;
-    background-image: url("https://1drv.ms/i/c/b81a9b7983f88386/UQSGg_iDeZsaIIC4MCAAAAAAAPWUYc5MD3Uy4JI?width=1468&height=930");
+    background-image: url("https://res.cloudinary.com/dr3r301ht/image/upload/v1742166399/treelinecropped_cv9wiy.png");
     background-position: bottom center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -2801,7 +2816,7 @@ html {
   .main-body .content .content-grid #item4 {
     display: grid;
     grid-template-columns: 1fr;
-    background-image: url("https://1drv.ms/i/c/b81a9b7983f88386/UQSGg_iDeZsaIIC4MiAAAAAAAJte3MhB3kieQCg?width=1466&height=1078");
+    background-image: url("https://res.cloudinary.com/dr3r301ht/image/upload/v1742166655/WA_map_faded_vfdqrp.jpg");
     background-repeat: no-repeat;
     background-position: right;
     background-size: cover;
